spacing correction on H1

--- a/style/main.css
+++ b/style/main.css
@@ -11,7 +11,7 @@ h1{
   font-weight: 700;
   font-size: 2.8em;
   color: #1824bf;
-  margin: 0.1em 0;
+  margin: 0.5em 0 0.1em 0;
 }
 
 h2{
